# Connect4_ConsoleGame

./: CMakeLists.txt  README.md
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  Bot_Random.cpp  Bot_Random.hpp  Game.cpp  Game.hpp  Human.cpp  Human.hpp  Player.cpp  Player.hpp  main.cpp
